# desktopcal-c8table

./: .gitignore  AGENTS.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-macos-arm64.yml
apps/android/: README.md  build-debug.ps1  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: package.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  styles.css
apps/web/src/components/: AppLayout.tsx  CommonScheduleView.tsx  EventDrawer.tsx  MonthCalendar.tsx  QuickAdd.tsx  ReportPreview.tsx  TimeRecordBoard.tsx  UpcomingList.tsx
apps/web/src/domain/: date.ts  mockEntries.ts  upcoming.test.ts  upcoming.ts
apps/web/src/repositories/: EntryRepository.ts  FeishuBitableEntryRepository.test.ts  FeishuBitableEntryRepository.ts  LocalAttachmentRepository.test.ts  LocalAttachmentRepository.ts  LocalEntryRepository.ts  LocalFirstEntryRepository.test.ts  LocalFirstEntryRepository.ts  TeableJsonEntryRepository.test.ts  TeableJsonEntryRepository.ts  TeableOAuth.test.ts  TeableOAuth.ts  (+4 more)
docs/: ANDROID_COMPANION.md  ARCHITECTURE.md  DEVELOPMENT.md  ECL.md  PACKAGING.md  STATUS.md  SYNC_PROTOCOL.md  USER_GUIDE.md  WEB_OAUTH.md
harness/changes/: INDEX.json
harness/changes/active/: plan.md  spec.md  summary.md  tasks.md
harness/evolution/: results.tsv  state.json
harness/templates/change/: plan.md  spec.md  summary.md  tasks.md
src/desktopcal/: __init__.py  cli.py
tests/: test_cli.py
(+16 files in other folders)
