[build-system]
requires = ["uv_build>=0.9.0,<0.11.0"]
build-backend = "uv_build"

[project]
name = "desktopcal"
version = "0.1.0"
description = "Windows-first desktop calendar, time logging, and report generator."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
desktopcal = "desktopcal.cli:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/desktopcal"]

[tool.pytest.ini_options]
pythonpath = ["src"]
